# threadpool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  countertask.cpp  countertask.h  filereadertask.cpp  filereadertask.h  filewrittertask.cpp  filewrittertask.h  itask.h  main.cpp  stringsconstants.h  threadpool.cpp  threadpool.h  threadpool.pro
src/: main.cpp  stringconstands.cpp  stringsconstants.h  threadpool.cpp  threadpool.h  threadpoolmanager.cpp  threadpoolmanager.h  userinpututils.cpp  userinpututils.h
src/interface/: itask.cpp  itask.h
src/workers/: countertask.cpp  countertask.h  filereadertask.cpp  filereadertask.h  filewritertask.cpp  filewritertask.h  filewrittertask.cpp  filewrittertask.h
